--- a/package.json
+++ b/package.json
@@ -7,24 +7,28 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start-server": "node simple_api/server.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
+    "express": "^4.19.2",
+    "npm": "^10.8.3",
+    "pnpm": "^9.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "vite": "^5.4.2"
   }
 }
